--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,3 +16,13 @@ jobs:
      - name: Récupération code
        if: ${{github.ref == 'refs/heads/master'}}
        uses: actions/checkout@v4.1.1
+     - name: Développement 
+       if: github.event.inputs.server == 'dev'
+       run: echo "Déploiement en Développement"
+     - name: Qualification 
+       if: github.event.inputs.server == 'qual'
+       run: echo "Déploiement en Qualification"
+     - name: Déploiement Production 
+       if: github.event.inputs.server == 'prod'
+       run: echo "Déploiement en Production"
+      
